app/globals.css
@media print {

    .mantine-Paper-root,
    .mantine-AppShell-main {
        background-color: white !important;
        box-shadow: none !important;
    }

    .mantine-ThemeIcon-root,
    .mantine-ColorSwitch-root,
    .mantine-Timeline-itemBullet,
    .mantine-Popover-dropdown,
    .mantine-Button-root,
    .mantine-Tooltip-tooltip {
        display: none !important;
    }

    .mantine-Timeline-item {
        --timeline-line-display: none !important;
        margin-top: 20px;
    }

    .mantine-Timeline-root {
        break-before: avoid;
    }

    .mantine-Timeline-itemBody {
        break-inside: avoid;
    }

    .mantine-List-root {
        break-before: avoid;
    }

    .mantine-Paper-root h1,
    .mantine-Paper-root h2,
    .mantine-Paper-root h3 {
        break-after: avoid;
    }
    
    .mantine-Grid-col {
        break-after: page;
    }

    .mantine-Paper-root,
    .mantine-Title-root,
    .mantine-Text-root,
    .mantine-Pill-root {
        color: black !important;
    }

    .mantine-Pill-root,
    .mantine-Grid-col,
    .mantine-AppShell-main  {
        background-color: white !important;
        padding: 0 !important;
    }

    .mantine-Timeline-item,
    .mantine-Timeline-root,
    .mantine-Timeline-itemBody {
        padding-left: 0;
        padding-inline-start: 0 !important;
    }

    .mantine-Grid-inner {
        padding: 10px;

    }

}

